# GlassBox-fin

./: .dockerignore  .gitignore  Dockerfile  GlassBox.html  LICENSE  README.md  alembic.ini  docker-compose.yml  glassbox-fin-PRD.md  glassbox-techspec.md  pyproject.toml  railway.json  render.yaml  requirements.txt  vercel.json
app/backend/: .env.example  .env.production.example  alembic.ini  auth.py  config.py  db.py  events.py  main.py  observability.py  ratelimit.py  requirements.txt
app/backend/alembic/: env.py
app/backend/migrations/: README.md  env.py
app/backend/migrations/versions/: bafd8fcbb456_initial_schema.py
app/backend/models/: __init__.py  fleet.py  org.py  ruleset.py  spend.py  trace.py  violation.py
app/backend/routers/: agents.py  auth.py  fleets.py  graph.py  holds.py  ingest.py  orgs.py  reports.py  rulesets.py  spend.py  stats.py  traces.py  vendors.py  violations.py  workspaces.py
app/backend/schemas/: __init__.py  auth.py  base.py  config.py  fleet.py  ingest.py  org.py  trace.py
app/backend/services/: reports.py  spend.py
app/frontend/: index.html  package-lock.json  package.json
app/frontend/src/: App.jsx  main.jsx
app/frontend/src/api/: agents.js  auth.js  client.js  graph.js  holds.js  org.js  spend.js  traces.js  violations.js
app/frontend/src/context/: AuthContext.jsx
app/frontend/src/hooks/: useSSE.js
app/frontend/src/landing/: initLanding.js  landing.css  markup.js
app/frontend/src/lib/: format.js
app/frontend/src/pages/: AgentRegistry.jsx  Docs.jsx  FleetView.jsx  HoldInbox.jsx  Home.jsx  Landing.jsx  Overview.jsx  Reports.jsx  RuleManager.jsx  Settings.jsx  (+4 more)
docs/: CONNECTING.md  DEPLOY.md  GTM.md  ROADMAP.md
examples/: README.md  free_agent.py  langchain_agent.py  llamaindex_agent.py  multi_agent.py  underwriting_agent.py
glassbox/: __init__.py  _ingest.py  cli.py  models.py  platform.py  session.py  tracer.py
glassbox/adapters/: __init__.py  anthropic.py  langchain.py  llamaindex.py  openai.py
glassbox/cli/: __init__.py  __main__.py  config.py  http.py  ui.py
glassbox/cli/commands/: control.py  keys.py  runner.py  setup.py  trail.py
glassbox/guardrails/: __init__.py  engine.py  exceptions.py  policy.py
glassbox/reporter/: __init__.py  json_reporter.py  pdf_reporter.py
glassbox/rules/: __init__.py  base.py  financial.py
legacy/: README.md  glassbox.css
tests/backend/: conftest.py  test_ratelimit.py  test_smoke.py
tests/cli/: test_cli.py
tests/unit/: test_guardrails.py  test_models.py  test_reporter.py  test_rules.py
video/: MASTER_PROMPT.md  README.md  STORYBOARD.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
video/public/audio/: README.md
video/src/: Main.tsx  Root.tsx
video/src/components/: AudioTrack.tsx  Background.tsx  BlurReveal.tsx  Camera.tsx  Cursor.tsx  Float.tsx  GlassPanel.tsx  GradientText.tsx  Grain.tsx  LightSweep.tsx  Particles.tsx  PushIn.tsx  Shockwave.tsx  Typewriter.tsx  Vignette.tsx
video/src/lib/: audio.ts  beats.ts  easings.ts  fonts.ts  theme.ts
video/src/scenes/: SceneCursor.tsx  SceneLogo.tsx  ScenePayoff.tsx  SceneProof.tsx  SceneQuestion.tsx  SceneTagline.tsx
video/src/three/: CubeLayer.tsx  GlassCube.tsx
(+45 files in other folders)
